[SECURITY] Security with jwt token
